[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Interact/Cama.gd" type="Script" id=1]
[ext_resource path="res://GFX/Objects/cama.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 130.524, 132.342 )

[node name="Cama" type="StaticBody2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -4.98457, -94.2287 )
texture = ExtResource( 2 )

[node name="Detect" type="Area2D" parent="."]
position = Vector2( -114.375, -243.813 )
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detect"]
position = Vector2( 110.477, 157.266 )
shape = SubResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( -114.375, -243.813 )
polygon = PoolVector2Array( 30.1961, 60.3884, -15.463, 266.983, 235.886, 268.353, 179.284, 57.3812 )

[node name="SpawnPhoto" type="Position2D" parent="."]
position = Vector2( -42.2072, 87.2452 )

[connection signal="body_entered" from="Detect" to="." method="_on_Detect_body_entered"]
[connection signal="body_exited" from="Detect" to="." method="_on_Detect_body_exited"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
